Uso de Stream.toList() para obtener listas inmutables y mejorar la mantenibilidad